Authorize paths